src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/null.php
<?php

return [
    'expectedError' => "Invalid body structure, must be an object",
    'expectedPropertyPath' => '(root)',
    'configuration' => null
];
